--- a/Lista_de_Tarefa/src/index.html
+++ b/Lista_de_Tarefa/src/index.html
@@ -4,23 +4,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/home.css">
     <title>Lista de Tarefas</title>
-
-    <!-- ICONS BOOTSTRAP -->
+    
+    <!-- ESTILIZAÇÃO -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./style/home.css">
 </head>
 
 <body>
     <!-- PRINCIPAL -->
     <main>
-        <section class="tarefas">
+        <section class="tarefas d-flex justify-content-between">
             <h2>Lista de Tarefas</h2>
-            <section class="menu-bar">
-                <button class="addTask">Adicionar Tarefa</button>
-                <input type="text" class="findTask" placeholder="Busque uma tarefa..">
-                <button aria-label="Filtrar tarefas" class="btn-filter"><i class="bi bi-filter"></i></button>
+            <section class="menu-bar d-flex justify-content-between align-items-center">
+                <button class="addTask btn btn-primary">Adicionar Tarefa</button>
+                <input type="text" class="findTask form-control" placeholder="Busque uma tarefa..">
+                <div class="btn-group" role="group">
+                    <button type="button" class="btn btn-primary dropdown-toggle btn-filter" data-bs-toggle="dropdown"
+                        aria-label="Filtrar tarefas" aria-expanded="false">
+                        <i class="bi bi-filter"></i>
+                    </button>
+
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                        <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                    </ul>
+                </div>
             </section>
+
         </section>
 
         <!-- MODAL DE TAREFA -->
@@ -50,6 +63,9 @@
     </main>
 
     <script src="./Javascript/home.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
