--- a/Lista_de_Tarefa/src/index.html
+++ b/Lista_de_Tarefa/src/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lista de Tarefas</title>
-    
+
     <!-- ESTILIZAÇÃO -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./style/home.css">
 </head>
@@ -24,14 +24,16 @@
                 <div class="btn-group" role="group">
                     <button type="button" class="btn btn-primary dropdown-toggle btn-filter" data-bs-toggle="dropdown"
                         aria-label="Filtrar tarefas" aria-expanded="false">
-                        <i class="bi bi-filter"></i>
+                        <i class="bi bi-filter"></i> Filtrar
                     </button>
-
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Dropdown link</a></li>
-                        <li><a class="dropdown-item" href="#">Dropdown link</a></li>
+                        <li><a class="dropdown-item" href="#" id="filter-all">Todas</a></li>
+                        <li><a class="dropdown-item" href="#" id="filter-pending">Pendente</a></li>
+                        <li><a class="dropdown-item" href="#" id="filter-completed">Concluída</a></li>
                     </ul>
+                    <button class="dark-btn" aria-label="Dark Button"><i class="bi bi-moon"></i></button>
                 </div>
+
             </section>
 
         </section>
@@ -39,10 +41,22 @@
         <!-- MODAL DE TAREFA -->
         <div class="modal-task">
             <div class="modal-content">
+                <button aria-label="Botão de fechamento" class="close-btn"><i class="bi bi-x-lg"></i></button>
                 <h2>Adicionar Tarefa</h2>
                 <input type="text" class="nameTask" placeholder="Digite o nome da tarefa">
                 <input type="text" class="descripTask" placeholder="Digite a descrição da tarefa">
                 <button class="submit">Adicionar</button>
+            </div>
+        </div>
+
+        <!-- MODAL DE EDIÇÃO -->
+        <div class="modal-task-edit">
+            <div class="modal-content">
+                <button aria-label="Botão de fechamento" class="close-btn"><i class="bi bi-x-lg"></i></button>
+                <h2>Alterar Tarefa</h2>
+                <input type="text" class="nameTaskEdit" placeholder="Digite o nome da tarefa">
+                <input type="text" class="descripTaskEdit" placeholder="Digite a descrição da tarefa">
+                <button class="submit-edit">alterar</button>
             </div>
         </div>
 
@@ -59,7 +73,7 @@
             </div>
         </div>
 
-
+        <!-- BOTÃO DE DARK MODE -->
     </main>
 
     <script src="./Javascript/home.js"></script>
