Função de filtro

--- a/Lista_de_Tarefa/src/index.html
+++ b/Lista_de_Tarefa/src/index.html
@@ -24,14 +24,13 @@
                 <div class="btn-group" role="group">
                     <button type="button" class="btn btn-primary dropdown-toggle btn-filter" data-bs-toggle="dropdown"
                         aria-label="Filtrar tarefas" aria-expanded="false">
-                        <i class="bi bi-filter"></i> Filtrar
+                        <i class="bi bi-filter filter-btn"></i> Filtrar
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#" id="filter-all">Todas</a></li>
                         <li><a class="dropdown-item" href="#" id="filter-pending">Pendente</a></li>
                         <li><a class="dropdown-item" href="#" id="filter-completed">Concluída</a></li>
                     </ul>
-                    <button class="dark-btn" aria-label="Dark Button"><i class="bi bi-moon"></i></button>
                 </div>
 
             </section>
@@ -52,7 +51,7 @@
         <!-- MODAL DE EDIÇÃO -->
         <div class="modal-task-edit">
             <div class="modal-content">
-                <button aria-label="Botão de fechamento" class="close-btn"><i class="bi bi-x-lg"></i></button>
+                <button aria-label="Botão de fechamento" class="close-btn-edit"><i class="bi bi-x-lg"></i></button>
                 <h2>Alterar Tarefa</h2>
                 <input type="text" class="nameTaskEdit" placeholder="Digite o nome da tarefa">
                 <input type="text" class="descripTaskEdit" placeholder="Digite a descrição da tarefa">
